# sql-debug-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  colab_pro_training.py  colab_real_world.py  inference.py  launch_job.py  openenv.yaml  presentation_graphs.py  pyproject.toml  requirements.txt  spider_chart.py  ultimate_benchmark.py  ultimate_sota_training.py
archive/: benchmark_spider.py  colab_final_stable.py  colab_script.py  colab_stable.py  colab_test.ipynb  grpo_train.py  inference.py  smoke_test.py
docs/: FULL_PROOF_REPORT.md  HF_SUBMISSION_GUIDE.md  JUDGE_CHEAT_SHEET.md  MASTER_MANUAL.md  SQL_DEBUG_AGENT_LAUNCH_BLOG.md  winning_pitch_deck.md
scripts/: benchmark_local.py
server/: __init__.py  app.py  database.py  env.py  gradio_ui.py  main.py  models.py  reward.py
server/tasks/: base.py  task_easy.py  task_finance_explosion.py  task_hard.py  task_medium.py
skills/graphify/: SKILL.md
skills/graphify/.obsidian/: workspace.json
skills/graphify/agents/: openai.yaml
tests/: test_api.py  test_env.py  test_graders.py  test_reward.py
