[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-debug-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "openenv-core>=0.1.0",
  "openai>=1.50.0",
  "httpx>=0.27.0",
  "python-multipart==0.0.9"
]

[project.scripts]
server = "server.app:main"

